Added a DualModeSaslClient